--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,15 @@ description = ""
 authors = ["Miles Lucas <mdlucas@hawaii.edu>"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.8,<3.10"
 numpy = "^1.21.1"
 astropy = "^4.3.post1"
 hcipy = "^0.4.0"
 matplotlib = "^3.4.2"
 proplot = "^0.7.0"
+tqdm = "^4.62.0"
+opencv-python = "^4.5.3"
+scipy = "^1.7.0"
 
 [tool.poetry.dev-dependencies]
 
