fix coronagraph prop errors

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,13 +8,14 @@ authors = ["Miles Lucas <mdlucas@hawaii.edu>"]
 python = "^3.8,<3.10"
 numpy = "^1.21.1"
 astropy = "^4.3.post1"
-hcipy = "^0.4.0"
+hcipy = {git = "https://github.com/ehpor/hcipy"}
 matplotlib = "^3.4.2"
 proplot = "^0.7.0"
 tqdm = "^4.62.0"
 opencv-python = "^4.5.3"
 scipy = "^1.7.0"
 PyPDF2 = "^1.26.0"
+toml = "^0.10.2"
 
 [tool.poetry.dev-dependencies]
 
