--- a/Project.toml
+++ b/Project.toml
@@ -1,15 +1,19 @@
 [deps]
+ADI = "904a6c7d-4c1b-562f-9573-ab2e7e1c7946"
+CondaPkg = "992eb4ea-22a4-4c89-a5bb-47a3300528ab"
 Dierckx = "39dd38d3-220a-591b-8e3c-4c3a8c710a94"
 FITSIO = "525bcba6-941b-5504-bd06-fd0dc1a4d2eb"
 Glob = "c27321d9-0574-5035-807b-f59d2c89b15c"
 LossFunctions = "30fc2ffe-d236-52d8-8643-a9d8f7c094a7"
 LuckyImaging = "a481cd35-27bf-4482-9964-852a9d15a5e7"
 Markdown = "d6f4376e-aef5-505a-96c1-9c027394607a"
+NPZ = "15e1cf62-19b3-5cfa-8e77-841668bca605"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 Photometry = "af68cb61-81ac-52ed-8703-edc140936be4"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
+PythonCall = "6099a3de-0909-46bc-b1f4-468b9a2dfc0d"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 UnitfulAngles = "6fb2a4bd-7999-5318-a3b2-8ad61056cd98"
