--- a/Project.toml
+++ b/Project.toml
@@ -1,5 +1,6 @@
 [deps]
 ADI = "904a6c7d-4c1b-562f-9573-ab2e7e1c7946"
+BiweightStats = "5bf8a1e9-d5f8-4697-9608-80edd97af0ad"
 CondaPkg = "992eb4ea-22a4-4c89-a5bb-47a3300528ab"
 Dierckx = "39dd38d3-220a-591b-8e3c-4c3a8c710a94"
 FITSIO = "525bcba6-941b-5504-bd06-fd0dc1a4d2eb"
@@ -15,6 +16,7 @@ Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 PythonCall = "6099a3de-0909-46bc-b1f4-468b9a2dfc0d"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 UnitfulAngles = "6fb2a4bd-7999-5318-a3b2-8ad61056cd98"
 UnitfulRecipes = "42071c24-d89e-48dd-8a24-8a12d9b8861f"
